* Possible to do interactive debug of the game + fixed project dependencies (resources), now entire solution compiles without errors + fixed existing macros to use *Root* macros defines instead of $(Solution)* + moved all VS build related folders (bin, intermediate, lib, etc...) out of solution folder + added xrGame and xrGameBin macros + changed Debug config to generate game related DLLs in game folder (defined by environment variable XRAY_16X_GAME) - removed some projects (dedicated, editor, plugins) from build list in Debug configuration

--- a/src/3rd party/cximage/cximage.vcxproj
+++ b/src/3rd party/cximage/cximage.vcxproj
@@ -55,7 +55,7 @@
     <TargetName>$(ProjectName)_static</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <OutDir>$(xrBinDir)</OutDir>
+    <OutDir>$(xrGameBinDir)</OutDir>
     <IntDir>$(xrIntDir)$(ProjectName)\</IntDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
